# er15-quickmove-curobo

./: .gitignore  README.md  pyproject.toml  run_mujoco_visualization.sh  run_quickmove_demo.sh
assets/er15_1400/: ER15-1400-fulldyn-curobo.urdf  ER15-1400-fulldyn-local.urdf  b_link.STL  er15-1400.mjcf.xml  er15_1400_approx.urdf  l_1.STL  l_2.STL  l_3.STL  l_4.STL  l_5.STL  l_6.STL
configs/: er15_1400_curobo.yml
examples/: benchmark_cartesian_line_payload.py  benchmark_same_task.py  compare_cspace_profiles.py  plan_cspace.py  plan_pose.py  torque_limited_time_scaling.py
scripts/: check_env.py  visualize_cspace_motion.py  visualize_mujoco_motion.py
src/er15_quickmove/: __init__.py  benchmark.py  cartesian.py  config.py  control.py  demo_trajectory.py  metrics.py  quickmove.py  torque.py
tests/: test_benchmark.py  test_limits.py  test_metrics.py  test_torque.py
