[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "er15-quickmove-curobo"
version = "0.1.0"
description = "QuickMove-like trajectory generation for EFORT ER15-1400 using cuRobo"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "torch",
  "pyyaml",
  "setuptools-scm",
  "yourdfpy",
  "cuda-core[cu12]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
